Add support for REST methods